--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "seed": "node backend/seed-supabase.js"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.2.2",
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/jsonwebtoken": "^9.0.5",
-    "tailwindcss": "^3.3.0",
+    "apexcharts": "^5.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "framer-motion": "^10.16.4",
-    "apexcharts": "^3.44.0",
-    "react-apexcharts": "^1.4.0",
     "axios": "^1.5.1",
-    "@supabase/supabase-js": "^2.39.0",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "lucide-react": "^0.292.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.4",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.292.0",
+    "next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "zustand": "^4.4.6",
-    "dotenv": "^16.3.1"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.2",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "eslint": "^8.51.0",
